# lentos

./: .gitignore  .rustfmt.toml  Cargo.toml  Shuttle.toml  db_schema.sql  deny.toml  package-lock.json  package.json
.cargo/: config.toml
app/: Cargo.toml  tailwind.config.js
app/src/: lib.rs
app/src/RUHET IN FRIEDEN/components/: home.rs  todo.rs
app/src/controllers/: mod.rs
app/src/controllers/api/: health.rs  mod.rs  todo.rs  user.rs
app/src/controllers/common/: mod.rs
app/src/deprecated_components/components/: auth.rs  base.rs
app/src/repository/: error.rs  mod.rs  session.rs  todo.rs  user.rs
app/src/util/: error.rs  error_or.rs  mod.rs  template_responder.rs
app/src/views/: mod.rs
app/static/: htmx.min.js  tailwind.css
app/templates/: base.html  error.html  home.html  index.html  login.html
axum_backend/: Cargo.toml
axum_backend/src/: config.rs  error.rs  main.rs  request.rs
axum_backend/src/repositories/: mod.rs  pg_auth.rs  pg_user_repo.rs  user_repository.rs
axum_backend/src/routes/: mod.rs  router.rs  user.rs
backend/api/: Cargo.toml
backend/api/src/: lib.rs
backend/api/src/repository/: error.rs  session.rs  todo.rs  user.rs
backend/api/src/routes/: error.rs  health.rs  mod.rs  template.rs  todo.rs  user.rs
backend/api/src/util/: body.rs  error.rs  mod.rs  response.rs
backend/config/: Cargo.toml
backend/config/src/: main.rs
bootstrap/: Cargo.toml
bootstrap/src/: main.rs
database/: 20231004214245_new_db.up.sql
frontend/: Cargo.toml  Dioxus.toml  index.html  rustc-ice-2023-12-06T23_27_22-90470.txt  tailwind.config.js  tailwind.css
frontend/src/: error.rs  home.rs  main.rs  temp.rs
frontend/src/api/: auth.rs  mod.rs  todo.rs
frontend/src/components/: check_box.rs  mod.rs  popup.rs  sign_in.rs  sign_up.rs  todo.rs  todo_list.rs  user.rs
frontend/src/handler/: api_client.rs  api_handler.rs  cookie_handler.rs  mod.rs
migrations/: 20231004214245_new_db.down.sql  20231004214245_new_db.up.sql
rest_client_files/: health.http  http-client.env.json  todos.http  users.http
shared/: Cargo.toml
shared/src/: models.rs
shared/src/models/: todo.rs  user.rs
