[package]
name = "axum_backend"
version = "0.1.0"
edition = "2021"
license.workspace = true
license-file.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared", features = ["backend"] }

thiserror = "1.0.30"
color-eyre = { version = "0.6.2", features = ["capture-spantrace"] }
derive_more = "0.99.17"

tracing = { version = "0.1" }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3", default-features = true, features = [
    "env-filter",
    "registry",
] }

serde = "1.0"
serde_json = "1.0.107"
serde_urlencoded = "0.7.0"

listenfd = "1.0.1"
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
async-trait = "0.1.75"

sqlx = { version = "0.7.1", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
] }

axum = { version = "0.7.2", features = [
    "http2",
    "json",
    "matched-path",
    "original-uri",
    "tokio",
    "form",
    "macros",
    "multipart",
] }
axum-login = "0.12.0"

hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1" }
mime = "0.3.16"

tower-sessions = { version = "0.9.1", features = [
    "memory-store",
    "postgres-store",
] }

tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.5.0", features = [
    "trace",
    "compression-full",
    "decompression-full",
] }
tower-service = "0.3.2"

rustls-pemfile = "1.0.4"
tokio-rustls = "0.24.1"

argon2 = { version = "0.5.2", features = ["std"] }
rand = "0.8.4"

app_dirs2 = "2.5.5"
toml = "0.8.8"
toml_edit = { version = "0.21.0", features = ["serde"] }
