[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true

[dependencies]
actix-web = { version = "4.3.1", features = ["rustls"] }
actix-files = "0.6.2"
actix-session = "0.8.0"
actix-identity = "0.6.0"

tokio = { version = "1.26.0", features = ["full"] }
sqlx = { version = "0.7.1", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
app = { path = "../app" }
# TODO remove this dependency since it is unmaintained
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"


tracing = { version = "0.1", features = ["log"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", default-features = true, features = [
    "env-filter",
    "registry",
] }
tracing-log = "0.2.0"
color-eyre = { version = "0.6.2", features = ["capture-spantrace"] }

# keep it like that or it'll fuck u
rustls = "0.20"

num_cpus = "1.14.0"
rustls-pemfile = "1.0.3"
