[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
dioxus-router = "0.4.1"
dioxus-router-macro = { version = "0.4.1" }
dioxus-signals = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "master" }

reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "cookies",
    "brotli",
    "json",
] }
reqwest_cookie_store = "0.6.0"

serde = "1.0.164"
serde_json = { version = "1.0.99", features = ["alloc"] }

tracing = { version = "0.1" }
color-eyre = { version = "0.6.2", features = ["capture-spantrace"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", default-features = true, features = [
    "env-filter",
] }

shared = { path = "../shared" }
app_dirs2 = "2.5.5"
derive_more = "0.99.17"