[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "master" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "master" }
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "master" }
dioxus-router-macro = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "master" }
dioxus-signals = { git = "https://github.com/DioxusLabs/dioxus.git", branch = "master" }

reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "cookies",
    "brotli",
    "json",
] }
reqwest_cookie_store = "0.6.0"

serde = "1.0.164"
serde_json = { version = "1.0.99", features = ["alloc"] }

color-eyre = { version = "0.6.2", features = ["capture-spantrace"] }
tracing = { version = "0.1" }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", default-features = true, features = [
    "env-filter",
] }
tracing-test = "0.2.4"

app_dirs2 = "2.5.5"

derive_more = "0.99.17"

tokio = { version = "1.32.0", optional = true }
async-std = "1.12.0"
