[package]
name = "shared"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.1", default-features = false, optional = true, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
derive_more = "0.99"
serde_json = "1.0"
dioxus = "0.4.0"

[dependencies.chrono]
version = "0.4"
features = ["serde", "wasmbind"]

[features]
backend = ["sqlx"]